methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:28: error: ')' expected but '<-' found.
  or(i <- 1 to 4){faireV();}
       ^